--- a/discord_twitter_webhooks/templates/add/send_link.html
+++ b/discord_twitter_webhooks/templates/add/send_link.html
@@ -9,9 +9,7 @@
                name="send_as_link"
                id="send_as_link"
                {% if settings.send_as_link %}checked{% endif %}
-               value="True"/>
-        <div id="send_as_link_help" class="form-text">
-            Do you want the tweet to be sent as a link?
-        </div>
+               value="True" />
+        <div id="send_as_link_help" class="form-text">Do you want the tweet to be sent as a link?</div>
     </div>
 </div>
