--- a/discord_twitter_webhooks/templates/add/translate.html
+++ b/discord_twitter_webhooks/templates/add/translate.html
@@ -9,37 +9,30 @@
                id="translate"
                name="translate"
                value="True"
-               {% if settings.translate %}checked{% endif %}
-        />
-        <div id="translate_help" class="form-text">Whether or not you want to translate the message. Note that you need
-            to add a DeepL API key in the <a class="text-muted" href="{{ url_for('settings') }}">settings</a> for this
+               {% if settings.translate %}checked{% endif %} />
+        <div id="translate_help" class="form-text">
+            Whether or not you want to translate the message. Note that you need
+            to add a DeepL API key in the <a class="text-muted" href='{{ url_for("settings") }}'>settings</a> for this
             to work.
         </div>
     </div>
-    <br/>
-
+    <br />
     {# Translate from? #}
     <label for="translate_from">Translate from</label>
-    <select class="form-select" name="translate_from" id="translate_from" style="width:auto;">
+    <select class="form-select" name="translate_from" id="translate_from" style="width:auto">
         {% for key, value in languages_from.items() %}
-            <option value="{{ language }}"
-                    {% if settings.translate_from == key %}selected{% endif %}>{{ value }}</option>
+            <option value="{{ language }}" {% if settings.translate_from==key %}selected{% endif %}>{{ value }}</option>
         {% endfor %}
     </select>
     <div id="translate_from" class="form-text">
         The language the tweet is in, you can leave this as automatic if you want.
     </div>
-
     {# Translate from? #}
     <label for="translate_from">Translate from</label>
-    <select class="form-select" name="translate_to" id="translate_from"
-            style="width:auto;">
+    <select class="form-select" name="translate_to" id="translate_from" style="width:auto">
         {% for key, value in languages_to.items() %}
-            <option value="{{ key }}"
-                    {% if settings.translate_to == key %}selected{% endif %}>{{ value }}</option>
+            <option value="{{ key }}" {% if settings.translate_to==key %}selected{% endif %}>{{ value }}</option>
         {% endfor %}
     </select>
-    <div id="translate_to" class="form-text">
-        The language you want to translate the tweet to.
-    </div>
+    <div id="translate_to" class="form-text">The language you want to translate the tweet to.</div>
 </div>
